update habit, dailies and item
