# src/api/userApi.js
@@ -1,4 +1,3 @@
-// api/userApi.js
 const express = require('express');
 const router = express.Router();
 const { loginUserOrCreate, getAllUsersHandler, verifyAndCreateUser, updateExperience, getUserInfo } = require('../middleware/userMiddleware');
@@ -10,7 +9,6 @@ router.post('/user', verifyAndCreateUser);
 router.post('/user/:userId/experience', checkAuth, updateExperience);
 router.post('/login', loginUserOrCreate);
 router.get('/user/info', checkAuth, getUserInfo);
-router.post('/dailies/:dailyId/complete', completeDailyTask);
 router.get('/secure-route', checkAuth, (req, res) => {
     res.send('This is a secure route accessible only to authenticated users.');
   });
